adding used car page

--- a/Car_shop.html
+++ b/Car_shop.html
@@ -10,5 +10,7 @@
 	<img src="depositphotos_122630550-stock-illustration-concept-auto-dealer-car-logo.jpg" alt="kars" width="200" length="200">
 	
 	We sell old and new cars :3
+	
+	<div id="button"><a href="UsedCars.html">Used Cars</a></div>
 </body>
 </html>
