Made new cars page

--- a/Car_shop.html
+++ b/Car_shop.html
@@ -11,6 +11,8 @@
 	
 	We sell old and new cars :3
 	
+	<div id="button"><a href="Car_shop.html">Home</a></div>
 	<div id="button"><a href="UsedCars.html">Used Cars</a></div>
+	<div id="button"><a href="NewCars.html">New Cars</a></div>
 </body>
 </html>
