--- a/NewCars.html
+++ b/NewCars.html
@@ -7,7 +7,7 @@
 
 	<img src="Thespeedisalotm8.jpg" alt="Bottom Gear" width="200" height="200">
 	
-	
+	We also sell super fast new cars
 <body>
 </body>
 </html>
